# usenix-2025-prism-anonymous-submission

./: .gitattributes  .gitignore  BENCHMARK.md  Cargo.toml  OVERHEAD.md  README.md
benchmarks/cassandra/: README.md  ycsb-read  ycsb-update
benchmarks/dependencies/cpu_contender/: Dockerfile  cpu_contender.py  run.sh
benchmarks/dependencies/goose/src/: metrics.rs
benchmarks/dependencies/solr-benchmark/: Cargo.toml
benchmarks/dependencies/solr-benchmark/src/: main.rs
benchmarks/kafka/: README.md  config.json  docker-compose.yml  run.sh
benchmarks/kafka/scrape-experiment-producer/: .gitignore  Cargo.toml
benchmarks/kafka/scrape-experiment-producer/src/: main.rs
benchmarks/ml-inference/: README.md
benchmarks/ml-inference/inference/: Dockerfile  api.py  model.py
benchmarks/ml-inference/load/: Dockerfile  locustfile.py
benchmarks/mysql/: README.md  experiment.sh
benchmarks/redis/: README.md  run.sh
benchmarks/solr/: README.md
benchmarks/teastore/: .gitignore  README.md  docker-compose.yml  double_wave.py  locustfile.py
example-application/: Cargo.toml  build.rs
example-application/src/: direct-read.c  main.rs
example-application/src/workload-generator/src/: main.rs
metric-collector/: Cargo.toml
metric-collector/src/: cmdline.rs  configure.rs  extract.rs  lib.rs  main.rs  target.rs
metric-collector/src/bpf/: clone.bt  futex_wait.bt  futex_wait_event.bt  io_wait.bt  io_wait_trace_events.bt  ipc.bt  ipc_trace_events.bt
metric-collector/src/execute/: mod.rs
metric-collector/src/execute/programs/: clone.rs  futex.rs  iowait.rs  ipc.rs  mod.rs
metric-collector/src/metrics/: futex.rs  iowait.rs  ipc.rs  mod.rs  scheduler.rs
notebooks/: cassandra.ipynb  fs.ipynb  kafka.ipynb  ml-inference.ipynb  mysql.ipynb  overhead.ipynb  poc.ipynb  redis.ipynb  solr.ipynb  teastore.ipynb  transform.py  v0_2_0.py
percentile-ps/: Cargo.toml
percentile-ps/src/: cli.rs  config.rs  main.rs
percentile-ps/src/program/: mod.rs  response_time.rs  throughput_ops.rs
poc/: Cargo.toml
poc/src/: futex-process.c  main.rs
poc/src/epoll_server/: main.rs
poc/src/fs-sync/bpf/: miscellaneous.md
poc/src/fs-sync/scripts/: iowait.sh  profile.sh  runtime.sh  vfs.bt
poc/src/fs-sync/src/: build.md  cpu.c  direct-read.c  main.rs  sync-write.c
poc/src/futex/: main.rs
poc/src/multiplexing_io/: build.sh  ename.c.inc  error_functions.c  get_num.c  poll.c  select.c  tlpi_poll  tlpi_select
poc/src/pipe/: main.rs
poc/src/stdin/: main.rs
poc/src/unix_sock/: accept_connect.rs  socketpair.rs
scripts/: unzip-datasets.sh  zip-datasets.sh
