[package]
name = "example-application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workload-generator"
path = "src/workload-generator/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"]}
core_affinity = "0.8.1"
http = "1.0.0"
httparse = "1.8.0"
libc = "0.2.153"
chrono = "0.4.33"
csv = "1.3.0"
eyre = "0.6.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]}

[build-dependencies]
cc = "1.0"
