[package]
name = "goose-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = { path = "../goose" }
tokio = "^1.12"
eyre = "0.6.12"
lazy_static = "1.5.0"
dashmap = "6.0.1"
rand = "0.8.5"
csv = "1.3.0"
