[package]
name = "scrape-cc2023-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]}
csv = "1.3.0"
